--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "laraveldaily/timezones",
+    "name": "trannguyen/timezones",
     "description": "Demo-package to show time",
     "authors": [
         {
