[add] first packages

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "licenses": "MIT",
     "authors": [
         {
-            "name": "Laravel Daily",
+            "name": "Trannguyen-package",
             "email": "tcnguyen0149@gmail.com"
         }
     ],
